added functionality of selecting the available rooms

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -3,6 +3,9 @@
 
 {% block content %}
     <div class="container">
+        <div style="text-align: center; font-size: 40px;">
+            Room :- {{room_name}}
+        </div>        
         <div class="columns is-multiline">
             <div class="column is-8 is-offset-2">
                 <div class="box">
