--- a/chat/templates/chat/home.html
+++ b/chat/templates/chat/home.html
@@ -20,6 +20,9 @@
                                 {% endif %}
                                 <p class="card-text"><strong>Email :- </strong>{{user.email}}</p>
                                 <div class="form-group">
+                                    {{room_names}}
+                                </div>
+                                <div class="form-group">
                                     <label><strong>Enter Room Name :- </strong></label>
                                     <input id="room-name-input" class="form-control" type="text" size="100">
                                 </div>
@@ -35,16 +38,18 @@
     </div>
 
     <script>
-        document.querySelector('#room-name-input').focus();
-        document.querySelector('#room-name-input').onkeyup = function(e) {
-            if (e.keyCode === 13) {
-                document.querySelector('#room-name-submit').click();
-            }
-        };
-    
         document.querySelector('#room-name-submit').onclick = function(e) {
-            var roomName = document.querySelector('#room-name-input').value;
-            window.location.pathname = roomName + '/';
+            var roomName = document.querySelector('#id_name').value;
+            var customRoomName = document.querySelector('#room-name-input').value;
+
+            if (roomName !== '' && customRoomName !== ''){
+                alert("Please either select the available room or create one room")
+                location.reload();
+            }else if(roomName !== '' && customRoomName === ''){
+                window.location.pathname = roomName + '/';
+            }else if(roomName === '' && customRoomName !== ''){
+                window.location.pathname = customRoomName + '/';
+            }
         };
     </script>    
 {% endblock content %}
