--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -7,7 +7,7 @@
                 Logo
             </a>
         </h1>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse collapse.show" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 {% if not request.user.is_authenticated %}
                     <li class="nav-item">
